--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 main{
     background-image: url(./images/pattern-background-desktop.svg);
     background-size: cover;
+    background-repeat: no-repeat;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -32,7 +33,7 @@ main{
 /* style for the card */
 .card{
     max-width: 300px;
-    background: white;
+    background: var(--paleblue);
     border-radius: 10px;
     margin: 5px;
    
