--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 /* style for the background */
 
 main{
-    background-image: url(./images/pattern-background-desktop.svg);
+    background-image: url(../images/pattern-background-desktop.svg);
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
@@ -29,11 +29,12 @@ main{
     align-items: center;
     flex-direction: column;
     max-width: 1440px;
+    background-color: var(--paleblue);
 }
 /* style for the card */
 .card{
-    max-width: 300px;
-    background: var(--paleblue);
+    max-width: 320px;
+    background: white;
     border-radius: 10px;
     margin: 5px;
    
@@ -42,7 +43,7 @@ main{
 
 .content{
     text-align: center;
-    padding: 3px 10px;
+    padding: 4px 10px;
     
 
 }
@@ -57,17 +58,18 @@ main{
 h3{
     color: var(--darkblue);
     font-weight: 900;
-    margin: 10px 0;
+    margin: 13px 0;
 }
 
 p{
     color: var(--desaturatedblue);
     font-size: 16px;
     font-weight: 500;
+    margin: 10px 0;
 }
 
 .container{
-    margin-top: 10px;
+    margin-top: 13px 0;
     display: flex;
     background: var(--verypaleblue) ;
     justify-content: space-evenly;
@@ -82,6 +84,7 @@ p{
     font-weight: 900;
 }
 .plan{
+    margin: 5px;
     position: relative;
     right: 11px;
 }
@@ -92,17 +95,18 @@ p{
     flex-direction: column;
 }
 #payment{
-    margin-bottom: 6px;
-    border-radius: 5px;
-    height: 35px;
+    margin: 10px 0;
+    border-radius: 6px;
+    height: 38px;
     background: var(--brightblue);
     color: var(--paleblue);
     font-weight: 700;
     cursor: pointer;
 }
 #cancel{
-    border-radius: 5px;
-    height: 35px;
+    margin-bottom: 6px;
+    border-radius: 6px;
+    height: 38px;
     background: white;
     color: var(--desaturatedblue);
     font-weight: 700;
